Deactivate button for 1800ms after click, fix jumping width

--- a/styles.css
+++ b/styles.css
@@ -1,145 +1,1 @@
-html, body {
-  height: 100%;
-}
-
-* {
-  margin: 0;
-}
-
-:root {
-  font-family: "Manrope", sans-serif;
-}
-
-body {
-  background-color: hsl(218deg, 23%, 16%);
-  /* Fallback text color */
-  color: #fff;
-}
-
-.component-wrapper {
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
-
-/* ALL colors in a component use local variables */
-/* Local variables can get values from base, but the component should be portable */
-/* This file is for local variables that change based on media queries */
-/* For logic that changes on media queries, see mobile and desktop files */
-:root {
-  --adv-cont-bgclr: hsl(217deg, 19%, 24%);
-  --adv-id-clr: hsl(150deg, 100%, 66%);
-  --adv-text-clr: hsl(193deg, 38%, 86%);
-  --adv-btn-bgclr: hsl(150deg, 100%, 66%);
-  --adv-btn-imgclr: hsl(218deg, 23%, 16%);
-  --adv-cont-minw: 280px;
-  --adv-cont-maxw: 350px;
-  --adv-cont-bradius: 8px;
-  --adv-id-fs: 12px;
-  --adv-text-fs: 22px;
-  --adv-text-lh: 1.3em;
-  --adv-btn-w: 64px;
-  --adv-btn-img-w: 24px;
-}
-
-@media (min-width: 1024px) {
-  :root {
-    --adv-cont-minw: 400px;
-    --adv-cont-maxw: 577px;
-    --adv-cont-bradius: 20px;
-    --adv-id-fs: 14px;
-    --adv-text-fs: 26px;
-  }
-}
-/* CSS layout for the mobile version */
-/* Defines general logic of the layout; most media-related changes are linked to variables in _variables.scss */
-.advice {
-  background-color: var(--adv-cont-bgclr);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  box-sizing: border-box;
-  padding: 45px 22px 64px 22px;
-}
-.advice.container {
-  min-width: var(--adv-cont-minw);
-  max-width: var(--adv-cont-maxw);
-  border-radius: var(--adv-cont-bradius);
-}
-.advice.centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.advice .divider-desktop {
-  display: none;
-}
-.advice .divider-mobile {
-  display: block;
-  width: 100%;
-}
-.advice .id {
-  color: var(--adv-id-clr);
-  font-size: var(--adv-id-fs);
-  font-weight: 400;
-  letter-spacing: 0.2em;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  transform: scaleY(0.9);
-}
-.advice .text {
-  color: var(--adv-text-clr);
-  font-size: var(--adv-text-fs);
-  font-weight: 500;
-  text-align: center;
-  line-height: var(--adv-text-lh);
-  letter-spacing: 0.05em;
-  margin: 35px 5px 30px 5px;
-}
-.advice .btn {
-  background-color: var(--adv-btn-bgclr);
-  width: var(--adv-btn-w);
-  height: var(--adv-btn-w);
-  border-radius: 100px;
-  position: absolute;
-  bottom: 0%;
-  left: 50%;
-  transform: translate(-50%, 50%);
-  display: flex;
-  align-items: center;
-  justify-items: center;
-}
-.advice .btn .img-dice {
-  display: block;
-  width: var(--adv-btn-img-w);
-  color: var(--adv-btn-imgclr);
-  margin: auto;
-}
-.advice .btn:hover, .advice .btn:focus {
-  outline: none;
-  box-shadow: 0px 0px 20px 3px var(--adv-btn-bgclr);
-}
-
-noscript > .advice {
-  color: var(--adv-text-clr);
-  font-size: var(--adv-text-fs);
-  padding: var(--adv-text-fs);
-}
-
-/* CSS layout for the dark version */
-/* Defines general logic; font size and other such variables are controlled by _variables.scss */
-@media (min-width: 1024px) {
-  .advice {
-    padding: 51px 54px 75px 54px;
-  }
-  .advice .divider-desktop {
-    display: block;
-    width: 100%;
-  }
-  .advice .divider-mobile {
-    display: none;
-  }
-}
+body,html{height:100%}*{margin:0}:root{font-family:Manrope,sans-serif}body{background-color:#1f2632;color:#fff}.component-wrapper{height:100%;position:relative;width:100%}:root{--adv-cont-bgclr:#323a49;--adv-id-clr:#52ffa8;--adv-text-clr:#cee3e9;--adv-btn-bgclr:#52ffa8;--adv-btn-imgclr:#1f2632;--adv-btn-inactive-bgclr:#147142;--adv-cont-w:93%;--adv-cont-bradius:8px;--adv-id-fs:12px;--adv-text-fs:22px;--adv-text-lh:1.3em;--adv-btn-w:64px;--adv-btn-img-w:24px}@media (min-width:512px){:root{--adv-cont-w:54%}}@media (min-width:1024px){:root{--adv-cont-w:37%;--adv-cont-bradius:20px;--adv-id-fs:14px;--adv-text-fs:26px}}.advice{align-items:center;background-color:var(--adv-cont-bgclr);box-sizing:border-box;display:flex;flex-direction:column;padding:45px 22px 64px}.advice.container{border-radius:var(--adv-cont-bradius);width:var(--adv-cont-w)}.advice.centered{left:50%;position:absolute;top:50%;transform:translate(-50%,-50%)}.advice .divider-desktop{display:none}.advice .divider-mobile{display:block;width:100%}.advice .id{color:var(--adv-id-clr);font-size:var(--adv-id-fs);font-weight:400;letter-spacing:.2em;transform:scaleY(.9);width:-webkit-fit-content;width:-moz-fit-content;width:fit-content}.advice .text{color:var(--adv-text-clr);font-size:var(--adv-text-fs);font-weight:500;letter-spacing:.05em;line-height:var(--adv-text-lh);margin:35px 5px 30px;text-align:center}.advice .btn{align-items:center;background-color:var(--adv-btn-inactive-bgclr);border-radius:100px;bottom:0;display:flex;height:var(--adv-btn-w);justify-items:center;left:50%;position:absolute;transform:translate(-50%,50%);width:var(--adv-btn-w)}.advice .btn .img-dice{color:var(--adv-btn-imgclr);display:block;margin:auto;width:var(--adv-btn-img-w)}.advice .btn.active{background-color:var(--adv-btn-bgclr)}.advice .btn.active:focus,.advice .btn.active:hover{box-shadow:0 0 20px 3px var(--adv-btn-bgclr);outline:none}noscript>.advice{color:var(--adv-text-clr);font-size:var(--adv-text-fs);padding:var(--adv-text-fs)}@media (min-width:1024px){.advice{padding:51px 54px 75px}.advice .divider-desktop{display:block;width:100%}.advice .divider-mobile{display:none}}
